--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,30 +2,30 @@
    Variables de thème
    ========================= */
 :root {
-  --bg-body: #020617;          /* fond global */
-  --bg-card: #f9fafb;          /* fond des pages */
+  --bg-body: #020617;
+  --bg-card: #f9fafb;
   --text-main: #020617;
   --text-muted: #374151;
-
   --accent: #2563eb;
   --accent-soft: #dbeafe;
-
   --tw-bg: #fff7ed;
   --tw-border: #f97316;
   --tw-text: #9a3412;
-
   --note-bg: #eff6ff;
   --note-border: #60a5fa;
-
   --border-soft: #e5e7eb;
-
   --radius-lg: 18px;
   --radius-md: 10px;
-
   --shadow-md: 0 18px 45px rgba(15, 23, 42, 0.22);
-
   --font-main: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
     sans-serif;
+}
+
+/* =========================
+   Header GitHub Page
+   ========================= */
+.site-title {
+  display: none !important;
 }
 
 /* =========================
@@ -129,7 +129,7 @@ ul {
   margin: 0.3rem 0 1.1rem;
 }
 
-li + li {
+li+li {
   margin-top: 0.25rem;
 }
 
